--- a/document/06-computational-model.Rmd
+++ b/document/06-computational-model.Rmd
@@ -36,14 +36,15 @@ The model consists of three main modules, each with its own set of parameters:
 
 Inspired by Bayesian computational modeling, the _Prior Knowledge_ module reflects the previous knowledge an individual brings to the melodic dictation.
 The _Selective Memory_-- somewhat akin to Karpinski's extractive listening^[I use different terms to avoid confusion when comparing models later]-- segments incoming musical information by using the window of attention as conceptualized as the limits of working memory capacity as a sensory bottleneck to constrict the size of musical chunk that an individual were to transcribe.
-Once musical material is in the focus of attention, the _Transcription_ function recursively pattern matches against the prior knowledge's corpus of information in order to find a match of explicitly known musical information.
+Once musical material is in the focus of attention, the _Transcription_ function pattern matches against the _Prior Knowledge's_ corpus of information in order to find a match of explicitly known musical information.
+The _Transcription_ function will recursively truncate what musical information is in _Selective Memory_ if not match is found. 
 This process reflects, but does not actually mirror the exact process used in melodic dictation, yet seems to be phenomenologically similar to the decision making process used when attempting notate novel melodies.
 Based on both the prior knowledge and individual differences of the individual, the model will scale in ability, with the general retrieval mechanisms in place.
 The exact details of the assumptions, parameters, and complete formula of the model are discussed below.
 
 ## The Model 
 
-Below describe my model's assumptions, parameters, as well as the steps taken when the model is run.
+Below I describe my model's assumptions, parameters, as well as the steps taken when the model is run.
 After detailing the inner workings of each of the assumptions and the modules, described in roughly the order that they occur, I present the model as a formula using the terminonlogy described below.
 I discuss the issues of assumptions and representations as they arise in describing the model. 
 
@@ -52,75 +53,43 @@ I discuss the issues of assumptions and representations as they arise in describ
 In order to write a computer program that mirrors the melodic dictation process, how the mind perceives and thinks about musical information must be defined _a priori_.
 Before delving into questions of representation, this model assumes that the musical surface JACKENDOFF as represented by the notes via Western musical notation are salient and can be perceived as distinct perceptual phenomena.
 Although there is work that suggests that different cultures and levels of experience might not categorize melodic information universally MCDERMOTT, other work suggests that things like experiencing pitches as discrete, categorical phenomena is categorized as a statistical human universal SAVAGE.
-For the purposes of this model in that it models something specific to a very WEIRD CITATION demographic, this issue is not as relevant. 
+For the purposes of this model I assume that individuals do in fact percive the musical surface similarly to the written score. 
 
-Knowing that it is melodic information or melodic data that needs to be represented, the question then becomes what are the best ways in which to represent it.
+Knowing that it is melodic information or melodic data that needs to be represented, the question then becomes what is the best way in which to represent it.
 This issue becomes increasingly complex when considering literature suggesting that the human mind represents musical information in a variety of different forms from PEARCE 2018 CITE THAT YOU HIGHLIGHTED.
 While I will attend to this issue below using the current state of the art, a brief review of how information is represented is warranted. 
 
-Much work has been done on this history of musical representation WIGGINS ET AL 1993 has been exhaustive, even though it has only been on for about 30 years but regardless of what exact representation is chosen, it generally can be conceived of as some sort of symbol string Clifford et al., 2005.
-How a string is represented carries with it important assumptions about a listener's perception and also a teacher's pedagogy.
-Take for example the many ways in which someone could represent the ever popular Twinkle, Twinkle Little Star as in Figure 1. 
-
-* TWINNLE IMAGE HERE in C and F#
-
-Representing the string of symbols as in Figure 2A using THIS NOTATION SYSTEM would suggest that listeners perception and cognition of the notes mirrors that of fixed _do_ solfege.
-The only symbols in the string, or tokens, represented carry with it the name of the note along with its absolute range.
-When compared to string 2B-- the melody transposed a tritone up-- a computer would find no symbol overlap between the two strings and might declare the two as completely dissimilar.
-Additionally, neither string contains with it any rhythmic information.
-Reproduced Figure 2C and Figure 2D, we see the same two strings now with additionally temporal information.
-
-* FIGURE 2 DIFFERENT TYPES OF REPRESENTATION
-* C4 C4 G4 G4 A4 A4 G4
-* F#4 F#4 C#5 C#5 D#6 D#6 C#6
-
-As stated above, this mapping assumes fixed pitch representation of musical information.
-This is at odds to intuition in that most humans would categorize the information in strings 2A and 2B as containing the same musical content.
-
-In order to capture that aspect of human perception and cognition, one might want to represent this string of musical information to the computer as a list of directional intervals (Math citation) which brings with it interval information not present (although maybe implicitly imposed!) in the previous examples.
-
-* C U +P5 U +M2 U -M2
-
-This representation then captures what might be considered phenomena closer to human perception, but again is devoid of any sort of scale degree functionality or qualia that might be involved in listener's perception.
-Including this assumption the string and duration values as it might be a Humdrum spine might be represented as:
-
-* DO DO ^SOL SOL ^LA LA >SOL (with rhythm)
-
-Each string represents what might be considered the same perceptual phenomena, but when quantified, one system needs to be explicitly chosen as how information is represented will change model output.
-For example if it is assumed that an individual's prior musical information can only be encoded as the first _fixed do_ example, then each of the 12 possible ascending perfect fifths would have to be learned as separate phenomena to be represented in as prior knowledge in this model.
-This point also brings up the importance of noting that many of these systems could be at play here and just because one representation might not make sense in one implementation of a model does not make it null and void for other applications in pedagogical settings.
-
-For the purposes of this model and further examples I will use the absolute interval representation of pitches here, with further directions in this research addressing how it would be possible to implement things like the scale degree and _fixed do_ model.
-Comparisons of this model output will also contribute to conversations regarding pedagogy in that if one form of data representation mirrors human behavior than the others, it would provide more than anecdotal evidence in support of the pedagogy of one system over another. 
+For the purposes of this model and further examples I choose to represent musical information using both the pitch (note and scale degree) and timing (rhythm and inter-onset-interval) representation described in Pearce (2018).
+Future research 
+Future research comparing this model's output using different representations will also contribute to conversations regarding pedagogy in that if one form of data representation mirrors human behavior than the others, it would provide more than anecdotal evidence in support of the pedagogy of one system over another. 
 How the model represents musical information is the first important parameter value that needs be chosen before running the model and this establishes the prior information.
 
-Given what was stated above, there are many was in which to digitally represent musical information.
-That said, one advantage in using the pre-exisiting IDyOM model as the backbone for this model is that it is capable of representing many types of musical representation simultaneously.
-Not only is pitch information represented, but using different WINDOWS, it then becomes possible to encode these multitude of parameter simultaneously (LIST THEM HERE?) each as their own token, which then can be used to model information content. 
+### Contents of the Prior Knowledge
 
-### Assumptions of Learned Material 
+The Prior Knowledge consists of a corpus of digitially represented melodies taken to reflect the implicitly understood structural patterns in a musical style that the listener has been exposed to.
+The logic of representing an individual's prior knowledge follows the asssumptions of both the Statistical Learning Hypothesis (SLH) and the Probabilistic Prediction Hypothesis (PPH), both core theoretical assumptions of the Information Dynamic of Music (IDyOM) model of Marcus Pearce (PEARCE).
+Using a corpus of melodies to represent an individual's prior knowledge relies on the Statistical Learning Hypothesis which states:
 
-* GOES HERE NUMBERS OF INTERVALS
+> musical enculturation is a process of implicit statistical learning in which listeners progressively acquire internal models of the statistical and structural regularities present in the musical styles to which they are exposed, over short (e.g., an individual piece of music) and long time scales (e.g., an entire lifetime of listening). p.2 (Pearce, 2018)
+
+The logic here is that the more an individual is exposed musical material, the more they will implicitly understand it which leads the corroborating probabilitic prediction hypothesis which states: 
+
+> while listening to new music, an enculturated listener applies models learned via the SLH to generate probabilistic predictions that enable them to organize and process their mental representations of the music and generate culturally appropriate responses. p.2 Pearce (2018).
+
+Taken together and then quantified using Shannon information content, it then becomes possible using the IDyOM framework to have a quantifiable measure that reliably predicts the amount of perceived unexpectedness in a musical melody that can change pending on the musical corpus that the model is trained on.
+As a model IDyOM has been sucessful mirorring human behavior in melodies, harmony-- outperforming WHATEVER models of harmony--, and is also being developed to handle polyphonic materials. 
+
+Stepping beyond the assumptions of IDyOM, the prior knowledge also needs to have a implicit/explicitly known parameter which indicates whether or not an pattern of music (single interval through n-gram pattern) is explicitly learned.
+This theshold can be set relative to the entire distribution of all n-grams in the corpus. 
+Whether or not an n-gram is explicitly known is used in the _Transcription_ module. 
 
 ### Modeling Information Content 
 
-Having established that the models first established parameter to be decided is how strings of melodies are represented, the next important decision that has to be made is how decideds segmentation for the second stage of attentive memory.
+Having established that the models first established parameters to be decided are the representation of strings and the implicit/explicit threshold, the next important decision that has to be made is how decideds segmentation for the second stage of attentive memory.
 Although there has been a large amount of work on different ways to segment the musical surface using rule based methods JACKENDOFF NARMOUR 2 TEMPERLY MARGULIS, which rely on matching a music theorist's intuition with a set of descriptive rules somewhat like the boundary formation rules in _GTTM_, as, as noted by Pearce (2018) rule based models often fail at when applied to music outside the Western art music canon.
 Additionally, since melodic dictation is an active memory process, rather than a semi-passive process of listening this model needs to be able to quantify musical information that is both dependent on prior musical experience and allows a movable boundary for selective attention so that musical information that is memory can be actively maintained, whilst carrying out another cognitive process, that of notating the melody. 
 
 In order to create this metric, I rely on IDyOM's use of information content (Shannon) which quantifies the information content of melodies based on corpus of materials.
-One hypothesis that IDyOM relies on is that musical information is learned via implicit statistical learning, which Pearce refers to as the Statistical Learning Hypothesis or SLH.
-The SLH states that 
-
-> musical enculturation is a process of implicit statistical learning in which listeners progressively acquire internal models of the statistical and structural regularities present in the musical styles to which they are exposed, over short (e.g., an individual piece of music) and long time scales (e.g., an entire lifetime of listening). p.2 
-
-Additionally IDyOM relies on the probabilistic prediction hypothesis or PPH which states that 
-
-> while listening to new music, an enculturated listener applies models learned via the SLH to generate probabilistic predictions that enable them to organize and process their mental representations of the music and generate culturally appropriate responses. p.2 
-
-Taken together and quantified using Shannon information content, it then becomes possible to have a quantifiable measure that reliably predicts the amount of perceived unexpectedness in a musical melody that can change pending on the musical corpus that the model is trained on.
-These measures of information content then can be summed together as a melody progresses over time and be used as a measure for the amount of limited musical material that is capable of being in the window of attention at one time. 
-
 For example, when trained against a corpus of melodies, THIS MELODY has IC (unitless thing) that is on top of notes.
 The advantage of operationalizing how an individual hears a melody like this is that melodies with lower information content, derived from an understanding of having more predictable patterns from the corpus, will allow for larger chunks to be put inside of the attentive memory buffer. 
 
@@ -131,7 +100,7 @@ A corpus of prior knowledge with less melodies would lead to higher information 
 
 ### Setting Limits with Transcribe
 
-With each note then quantified with a measure of information content, it then becomes possible to set a limit on the maximum amount of information that the individual would be able to hold in memory as defined by a an attentional threshold.
+With each note then quantified with a measure of information content, it then becomes possible to set a limit on the maximum amount of information that the individual would be able to hold in memory as defined by the _Selective Attention_ module.
 A higher threshold would allow for more musical material to be put in the attentional buffer, and a lower threshold would restrict the amount of information held in an attentional buffer.
 By putting a threshold on this value, this serves as something akin to a perceptual bottleneck based on the assumption that there is a capacity limit to that of working memory.
 Modulating this boundary will help provide insights into the degree to which melodic material can be retained between high and low working memory span individuals.
@@ -143,13 +112,12 @@ In theory, the maximum of the attentional buffer should not be reached since the
 ### Pattern Matching
 
 With subset of notes of the melody represented in the attentional buffer, whether or not the melody becomes notated depends on whether or not the melody or string in the buffer can be matched with a string that is explicitly known in the corpus.
-* Do I introduce the explicit implicit thing earlier?
-Mirroring a search pattern akin to Cowan's Embedded Process model, the individual would search across their long term memory for anything close to or resembling the string pattern in the attentional buffer.
+Mirroring a search pattern akin to Cowan's Embedded Process model, the individual would search across their long term memory, or _Prior Knowledge_ for anything close to or resembling the string pattern in the attentional buffer.
 
 * Image of wallpaper search here? 
 
 Using this logic, longer pattern strings n-grams would be less likely to be recalled exactly.
-If a pattern is not found in the initial search, one token of the n-gram would be dropped off the string and the search would happen again.
+If a pattern is not found in the initial search that is _explicitly_ known, one token of the n-gram would be dropped off the string and the search would happen again.
 This recursive process would happen until an explicit long term memory match is made.
 Like humans taking melodic dictation, the computer would have the best luck finding patterns that fall within the largest density of a corpus of intervals distribution.
 Additionally, like students performing a dictation, if a student does not explicitly know an interval, or a 2-gram, the dictation would not be able to be completed. 
@@ -159,6 +127,8 @@ Upon the successful explicit match of a string, that section of the melody would
 The model here would register that one iteration of the function has been run and the chunk transcribed would then be recorded.
 After recording this history, the process would happen again starting at either the next note from where the model left off, the note in the entire string with the lowest information content, or n-gram left in the melody with that is most represented in the corpus.
 This parameter is defined before the model is run and the question of dictation re-entry certainly warrants further research and investigation. 
+
+xxxxxxxxxxxxxxxxxxxxxxxxx
 
 This type of pattern search also dependent on the way that the prior knowledge is represented.
 In the example here, both interval and rhythm are represented with each token in the string.
@@ -286,3 +256,38 @@ Creating a computational model is the next step in furthering research on aural 
  
 
 
+Much work has been done on this history of musical representation WIGGINS ET AL 1993 has been exhaustive, even though it has only been on for about 30 years but regardless of what exact representation is chosen, it generally can be conceived of as some sort of symbol string Clifford et al., 2005.
+How a string is represented carries with it important assumptions about a listener's perception and also a teacher's pedagogy.
+Take for example the many ways in which someone could represent the ever popular Twinkle, Twinkle Little Star as in Figure 1. 
+
+* TWINNLE IMAGE HERE in C and F#
+
+Representing the string of symbols as in Figure 2A using THIS NOTATION SYSTEM would suggest that listeners perception and cognition of the notes mirrors that of fixed _do_ solfege.
+The only symbols in the string, or tokens, represented carry with it the name of the note along with its absolute range.
+When compared to string 2B-- the melody transposed a tritone up-- a computer would find no symbol overlap between the two strings and might declare the two as completely dissimilar.
+Additionally, neither string contains with it any rhythmic information.
+Reproduced Figure 2C and Figure 2D, we see the same two strings now with additionally temporal information.
+
+* FIGURE 2 DIFFERENT TYPES OF REPRESENTATION
+* C4 C4 G4 G4 A4 A4 G4
+* F#4 F#4 C#5 C#5 D#6 D#6 C#6
+
+As stated above, this mapping assumes fixed pitch representation of musical information.
+This is at odds to intuition in that most humans would categorize the information in strings 2A and 2B as containing the same musical content.
+
+In order to capture that aspect of human perception and cognition, one might want to represent this string of musical information to the computer as a list of directional intervals (Math citation) which brings with it interval information not present (although maybe implicitly imposed!) in the previous examples.
+
+* C U +P5 U +M2 U -M2
+
+This representation then captures what might be considered phenomena closer to human perception, but again is devoid of any sort of scale degree functionality or qualia that might be involved in listener's perception.
+Including this assumption the string and duration values as it might be a Humdrum spine might be represented as:
+
+* DO DO ^SOL SOL ^LA LA >SOL (with rhythm)
+
+Each string represents what might be considered the same perceptual phenomena, but when quantified, one system needs to be explicitly chosen as how information is represented will change model output.
+For example if it is assumed that an individual's prior musical information can only be encoded as the first _fixed do_ example, then each of the 12 possible ascending perfect fifths would have to be learned as separate phenomena to be represented in as prior knowledge in this model.
+This point also brings up the importance of noting that many of these systems could be at play here and just because one representation might not make sense in one implementation of a model does not make it null and void for other applications in pedagogical settings.
+
+Given what was stated above, there are many was in which to digitally represent musical information.
+That said, one advantage in using the pre-exisiting IDyOM model as the backbone for this model is that it is capable of representing many types of musical representation simultaneously.
+Not only is pitch information represented, but using different WINDOWS, it then becomes possible to encode these multitude of parameter simultaneously (LIST THEM HERE?) each as their own token, which then can be used to model information content. 
